samples/_failures_safe/1761437756_0deb77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7770b012.c: In function ‘main’:
./samples/SAFE/__tmp_7770b012.c:157:17: error: expected declaration or statement at end of input
  157 |                 } else {
      |                 ^
./samples/SAFE/__tmp_7770b012.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7770b012.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7770b012.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7770b012.c:157:17: error: expected declaration or statement at end of input
